[gd_scene load_steps=31 format=2]

[ext_resource path="res://Source/Scripts/New_LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://Source/Images/8081_earthmap4k.jpg" type="Texture" id=2]
[ext_resource path="res://Source/Animations/globe_scaleUp.tres" type="Animation" id=3]
[ext_resource path="res://Source/Animations/globe_rotate.tres" type="Animation" id=4]
[ext_resource path="res://Source/Images/globe_normalMapjpg.jpg" type="Texture" id=5]
[ext_resource path="res://Source/Images/earthcloudmap.jpg" type="Texture" id=6]
[ext_resource path="res://Source/Images/photo-1520034475321-cbe63696469a.jpg" type="Texture" id=7]
[ext_resource path="res://Source/Fonts/azonix-font/Azonix-1VB0.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Source/Fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Source/Sounds-Audio/621798__tkky__epic-warm-chords-Edited.mp3" type="AudioStream" id=10]
[ext_resource path="res://Source/AudioPlayerLevelSelector.gd" type="Script" id=11]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 0.3
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 6 )
normal_enabled = true
normal_scale = 1.3
normal_texture = ExtResource( 5 )
detail_enabled = true
detail_mask = ExtResource( 6 )
detail_blend_mode = 0
detail_uv_layer = 0
detail_albedo = ExtResource( 2 )
detail_normal = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera_Globe/Camera:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.66609, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Camera_Globe/Camera:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.733222, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Camera_Globe/Camera:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -2.41552, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Camera_Globe/Camera:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -14.1387, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Camera_Globe/Camera:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -179.203, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Camera_Globe/Camera:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -0.19473, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("MeshInstance:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("MeshInstance:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("MeshInstance:scale:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("UI/Planet_Label:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("UI/Planet_Label:percent_visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "globe_into"
length = 5.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera_Globe/Camera:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.66609, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Camera_Globe/Camera:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.733222, -0.25, 0, 0.25, 0, 0.733222, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Camera_Globe/Camera:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -2.41552, -0.25, 0, 0.25, 0, -2.41552, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Camera_Globe/Camera:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -14.1387, -0.25, 0, 0.25, 0, -14.1387, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Camera_Globe/Camera:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -162.991, -0.25, 0, 0.25, 0, -179.203, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Camera_Globe/Camera:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -0.19473, -0.25, 0, 0.25, 0, -0.19473, -0.25, 0, 0.25, 0, -0.19473, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5, 2.7 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("UI/Planet_Label:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("UI/Planet_Label:percent_visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.402, -0.25, 0, 0.25, 0, 0.639, -0.25, 0, 0.25, 0, 0.825, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( -0.2, 1.6, 1.9, 2.2, 2.5, 2.8 )
}

[sub_resource type="Animation" id=5]
resource_name = "globe_scaleDown"
tracks/0/type = "bezier"
tracks/0/path = NodePath("MeshInstance:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MeshInstance:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MeshInstance:scale:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}

[sub_resource type="SphereShape" id=7]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("MeshInstance:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MeshInstance:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MeshInstance:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "globe_rotation"
length = 13.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("MeshInstance:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 13 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MeshInstance:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 13 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MeshInstance:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 13 )
}

[sub_resource type="PanoramaSky" id=11]
panorama = ExtResource( 7 )

[sub_resource type="Environment" id=12]
background_mode = 2
background_sky = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="DynamicFont" id=14]
size = 15
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[sub_resource type="DynamicFont" id=18]
size = 14
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=19]
default_font = SubResource( 18 )

[sub_resource type="Animation" id=20]
resource_name = "LevelSelectorTransition"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera_Globe" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Camera_Globe"]
transform = Transform( -0.999909, -6.2678e-07, -0.0134884, -0.00329572, 0.969702, 0.24427, 0.0130796, 0.244292, -0.969613, 1.66609, 0.733222, -2.41552 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.3, 0, 2.27299e-07, 0, 1.3, 0, -2.27299e-07, 0, 1.3, 0.00458074, -0.00583899, 0.00363779 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/globe_into = SubResource( 4 )
anims/globe_rotate = ExtResource( 4 )
anims/globe_scaleDown = SubResource( 5 )
anims/globe_scaleUp = ExtResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 7 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/RESET = SubResource( 9 )
anims/globe_rotation = SubResource( 10 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
anims/globe_rotate = ExtResource( 4 )
anims/globe_scaleUp = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.323075, 0, 0.946373, 0, 1, 0, -0.946373, 0, -0.323075, 5.54899, 0.661884, -3.58827 )
light_energy = 1.2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="GlobeSpinTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="UI" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -513.0
margin_right = 511.0
margin_bottom = 598.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet_Label" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -208.0
margin_top = 12.0
margin_right = 212.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 13 )
text = "EARTH"
align = 1
percent_visible = 0.0

[node name="MissionListContinent" type="Button" parent="UI"]
margin_left = 793.0
margin_top = 417.0
margin_right = 953.0
margin_bottom = 435.0
custom_fonts/font = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
text = "MISSIONS: AFRICA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionList" type="ScrollContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 277.5
margin_top = -154.0
margin_right = 510.5
theme = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MissionList"]
theme = SubResource( 19 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 599.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer4" type="AnimationPlayer" parent="."]
autoplay = "LevelSelectorTransition"
anims/LevelSelectorTransition = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.37
pitch_scale = 0.4
autoplay = true

[node name="Audio" type="Spatial" parent="."]
script = ExtResource( 11 )

[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
[connection signal="timeout" from="GlobeSpinTimer" to="." method="_on_GlobeSpinTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="Audio" method="_on_AudioStreamPlayer_finished"]
